--- a/components/en/modal-success.html
+++ b/components/en/modal-success.html
@@ -18,7 +18,7 @@
                 data-class-in="opacity-100 translate-y-0"
                 class="w-full z-50 max-w-[500px] max-h-screen scrolling-touch transition-all duration-300 bg-white flex flex-col transform shadow-xl rounded-md m-5 opacity-100 translate-y-0">
             <div class="w-full flex flex-col p-6 items-center relative mx-auto bg-white rounded-2xl">
-              <img src="/images/success.svg" alt="Success" width="452" height="205" class="max-w-[231px] max-h-[105px] lg:max-w-[452px] lg:max-h-[205px]"/>
+              <img src="/images/success.svg" alt="Success" width="452" height="205" class="w-full lg:max-w-[452px] lg:max-h-[205px]"/>
 
                 <p class="my-4 text-lg lg:text-xl font-bold">Registration Successful!</p>
                 <p class="my-1 text-sm lg:text-base text-center">Within 24 hours, please pay attention to your phone and check your email, the GapoWork team will contact you to provide detailed advice and support!</p>
