feat: update image

--- a/components/vi/content-3-mb.html
+++ b/components/vi/content-3-mb.html
@@ -175,7 +175,7 @@
                               d="M35.2024 20.8088V14.0064H32.6621V15.7416C31.3405 14.6183 29.6583 14.0027 27.92 14.0064C23.8836 14.0064 20.6094 17.2264 20.6094 21.1976C20.6094 25.1688 23.8836 28.3886 27.92 28.3886C29.7407 28.3886 31.406 27.7362 32.6902 26.6394V27.3058C32.6902 28.6524 32.3094 29.7074 31.5471 30.4988C30.7567 31.3038 29.7266 31.6928 28.3575 31.6928C26.2406 31.6928 24.8009 30.8182 23.9683 29.0128H21.2444C21.7243 30.5816 22.6135 31.831 23.9259 32.7194C25.182 33.5664 26.6779 33.9968 28.3716 33.9968C30.7567 33.9968 32.6343 33.1368 33.9322 31.4424C34.4685 30.7624 34.8354 29.9424 35.018 29.0268C35.0955 28.6092 35.1474 28.1873 35.1732 27.7634C35.1847 27.6278 35.1867 27.4834 35.1948 26.939C35.1968 26.815 35.1988 26.6702 35.2014 26.5002V21.5724C35.2133 21.4478 35.218 21.3227 35.2157 21.1976C35.2184 21.0679 35.214 20.9381 35.2024 20.8088ZM27.92 25.862C25.295 25.862 23.1638 23.7658 23.1638 21.1836C23.1638 18.6014 25.2952 16.5052 27.92 16.5052C30.5448 16.5052 32.6769 18.6014 32.6769 21.1836C32.6621 23.7658 30.5309 25.862 27.92 25.862Z"
                               fill="white"/>
                         <defs>
-                            <filter id="filter0_d_98_8715" x="0.367188" y="0" width="56.2144" height="56"
+                            <filter  x="0.367188" y="0" width="56.2144" height="56"
                                     filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                 <feColorMatrix in="SourceAlpha" type="matrix"
@@ -201,7 +201,7 @@
                         </g>
                         <rect x="16.311" y="12" width="24" height="24" fill="url(#pattern0_98_8719)"/>
                         <defs>
-                            <filter id="filter0_d_98_8719" x="0" y="0" width="56.2144" height="56"
+                            <filter  x="0" y="0" width="56.2144" height="56"
                                     filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                 <feColorMatrix in="SourceAlpha" type="matrix"
@@ -543,7 +543,7 @@
                               d="M35.2024 20.8088V14.0064H32.6621V15.7416C31.3405 14.6183 29.6583 14.0027 27.92 14.0064C23.8836 14.0064 20.6094 17.2264 20.6094 21.1976C20.6094 25.1688 23.8836 28.3886 27.92 28.3886C29.7407 28.3886 31.406 27.7362 32.6902 26.6394V27.3058C32.6902 28.6524 32.3094 29.7074 31.5471 30.4988C30.7567 31.3038 29.7266 31.6928 28.3575 31.6928C26.2406 31.6928 24.8009 30.8182 23.9683 29.0128H21.2444C21.7243 30.5816 22.6135 31.831 23.9259 32.7194C25.182 33.5664 26.6779 33.9968 28.3716 33.9968C30.7567 33.9968 32.6343 33.1368 33.9322 31.4424C34.4685 30.7624 34.8354 29.9424 35.018 29.0268C35.0955 28.6092 35.1474 28.1873 35.1732 27.7634C35.1847 27.6278 35.1867 27.4834 35.1948 26.939C35.1968 26.815 35.1988 26.6702 35.2014 26.5002V21.5724C35.2133 21.4478 35.218 21.3227 35.2157 21.1976C35.2184 21.0679 35.214 20.9381 35.2024 20.8088ZM27.92 25.862C25.295 25.862 23.1638 23.7658 23.1638 21.1836C23.1638 18.6014 25.2952 16.5052 27.92 16.5052C30.5448 16.5052 32.6769 18.6014 32.6769 21.1836C32.6621 23.7658 30.5309 25.862 27.92 25.862Z"
                               fill="white"/>
                         <defs>
-                            <filter id="filter0_d_98_8715" x="0.367188" y="0" width="56.2144" height="56"
+                            <filter x="0.367188" y="0" width="56.2144" height="56"
                                     filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                 <feColorMatrix in="SourceAlpha" type="matrix"
@@ -569,7 +569,7 @@
                         </g>
                         <rect x="16.311" y="12" width="24" height="24" fill="url(#pattern0_98_8719)"/>
                         <defs>
-                            <filter id="filter0_d_98_8719" x="0" y="0" width="56.2144" height="56"
+                            <filter  x="0" y="0" width="56.2144" height="56"
                                     filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                 <feColorMatrix in="SourceAlpha" type="matrix"
@@ -1006,7 +1006,7 @@
                               d="M35.2024 20.8088V14.0064H32.6621V15.7416C31.3405 14.6183 29.6583 14.0027 27.92 14.0064C23.8836 14.0064 20.6094 17.2264 20.6094 21.1976C20.6094 25.1688 23.8836 28.3886 27.92 28.3886C29.7407 28.3886 31.406 27.7362 32.6902 26.6394V27.3058C32.6902 28.6524 32.3094 29.7074 31.5471 30.4988C30.7567 31.3038 29.7266 31.6928 28.3575 31.6928C26.2406 31.6928 24.8009 30.8182 23.9683 29.0128H21.2444C21.7243 30.5816 22.6135 31.831 23.9259 32.7194C25.182 33.5664 26.6779 33.9968 28.3716 33.9968C30.7567 33.9968 32.6343 33.1368 33.9322 31.4424C34.4685 30.7624 34.8354 29.9424 35.018 29.0268C35.0955 28.6092 35.1474 28.1873 35.1732 27.7634C35.1847 27.6278 35.1867 27.4834 35.1948 26.939C35.1968 26.815 35.1988 26.6702 35.2014 26.5002V21.5724C35.2133 21.4478 35.218 21.3227 35.2157 21.1976C35.2184 21.0679 35.214 20.9381 35.2024 20.8088ZM27.92 25.862C25.295 25.862 23.1638 23.7658 23.1638 21.1836C23.1638 18.6014 25.2952 16.5052 27.92 16.5052C30.5448 16.5052 32.6769 18.6014 32.6769 21.1836C32.6621 23.7658 30.5309 25.862 27.92 25.862Z"
                               fill="white"/>
                         <defs>
-                            <filter id="filter0_d_98_8715" x="0.367188" y="0" width="56.2144" height="56"
+                            <filter x="0.367188" y="0" width="56.2144" height="56"
                                     filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                 <feColorMatrix in="SourceAlpha" type="matrix"
@@ -1032,7 +1032,7 @@
                         </g>
                         <rect x="16.311" y="12" width="24" height="24" fill="url(#pattern0_98_8719)"/>
                         <defs>
-                            <filter id="filter0_d_98_8719" x="0" y="0" width="56.2144" height="56"
+                            <filter x="0" y="0" width="56.2144" height="56"
                                     filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                                 <feColorMatrix in="SourceAlpha" type="matrix"
