--- a/components/vi/modal.html
+++ b/components/vi/modal.html
@@ -42,22 +42,22 @@
                     <p class="text-2xl leading-6 font-bold lg:text-lg lg:font-medium text-[#151917]">Nhập thông tin đăng ký</p>
                     <form class="grid grid-cols-2 gap-4 mt-6 text-form-black text-form font-semibold">
                         <label class="col-span-2 flex flex-col gap-1">
-                            <p>Họ tên <span class="text-form-red">*</span></p>
+                            <span>Họ tên <span class="text-form-red">*</span></span>
                             <input id="nameInput" class="input-form" type="text"/>
                             <span id="errorName" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="col-span-2 flex flex-col gap-1">
-                            <p>Email <span class="text-form-red">*</span></p>
+                            <span>Email <span class="text-form-red">*</span></span>
                             <input id="emailInput" class="input-form" type="text"/>
                             <span id="errorEmail" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Số điện thoại <span class="text-form-red">*</span></p>
+                            <span>Số điện thoại <span class="text-form-red">*</span></span>
                             <input id="phoneInput" class="input-form" type="text"/>
                             <span id="errorPhone" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Chức danh <span class="text-form-red">*</span></p>
+                            <span>Chức danh <span class="text-form-red">*</span></span>
                             <select id="titleInput" name="title" class="input-form">
                                 <option value=""></option>
                                 <option value="CEO/Founder/Chủ tịch">CEO/Founder/Chủ tịch</option>
@@ -69,12 +69,12 @@
                             <span id="errorTitle" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Công ty <span class="text-form-red">*</span></p>
+                            <span>Công ty <span class="text-form-red">*</span></span>
                             <input id="companyInput" class="input-form" type="text"/>
                             <span id="errorCompany" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Quy mô </p>
+                            <span>Quy mô </span>
                             <select id="scaleInput" name="scaleInput" class="input-form">
                                 <option value=""></option>
                                 <option value="Dưới 50">Dưới 50</option>
