--- a/components/en/modal.html
+++ b/components/en/modal.html
@@ -41,22 +41,22 @@
                     <p class="text-2xl leading-6 font-bold lg:text-lg lg:font-medium text-[#151917]">Enter Registration Information</p>
                     <form class="grid grid-cols-2 gap-4 mt-6 text-form-black text-form font-semibold">
                         <label class="col-span-2 flex flex-col gap-1">
-                            <p>Full Name <span class="text-form-red">*</span></p>
+                            <span>Full Name <span class="text-form-red">*</span></span>
                             <input id="nameInput" class="input-form" type="text"/>
                             <span id="errorName" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="col-span-2 flex flex-col gap-1">
-                            <p>Email <span class="text-form-red">*</span></p>
+                            <span>Email <span class="text-form-red">*</span></span>
                             <input id="emailInput" class="input-form" type="text"/>
                             <span id="errorEmail" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Phone Number <span class="text-form-red">*</span></p>
+                            <span>Phone Number <span class="text-form-red">*</span></span>
                             <input id="phoneInput" class="input-form" type="text"/>
                             <span id="errorPhone" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Job Title <span class="text-form-red">*</span></p>
+                            <span>Job Title <span class="text-form-red">*</span></span>
                             <select id="titleInput" name="title" class="input-form">
                                 <option value=""></option>
                                 <option value="CEO/Founder/Chủ tịch">CEO/Founder/Chủ tịch</option>
@@ -68,12 +68,12 @@
                             <span id="errorTitle" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Company <span class="text-form-red">*</span></p>
+                            <span>Company <span class="text-form-red">*</span></span>
                             <input id="companyInput" class="input-form" type="text"/>
                             <span id="errorCompany" class="text-red font-normal text-xs"></span>
                         </label>
                         <label class="flex flex-col gap-1">
-                            <p>Scale </p>
+                            <span>Scale </span>
                             <select id="scaleInput" name="scaleInput" class="input-form">
                                 <option value=""></option>
                                 <option value="Dưới 50">Dưới 50</option>
