feat: update content

--- a/components/en/content-3-mb.html
+++ b/components/en/content-3-mb.html
@@ -212,7 +212,7 @@
                                 <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_98_8719"
                                          result="shape"/>
                             </filter>
-                            <pattern id="pattern0_98_8719" patternContentUnits="objectBoundingBox" width="1" height="1">
+                            <pattern patternContentUnits="objectBoundingBox" width="1" height="1">
                                 <use xlink:href="#image0_98_8719" transform="translate(0.03) scale(0.00333333)"/>
                             </pattern>
                             <image id="image0_98_8719" width="282" height="300"
@@ -568,7 +568,7 @@
                                 <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_98_8719"
                                          result="shape"/>
                             </filter>
-                            <pattern id="pattern0_98_8719" patternContentUnits="objectBoundingBox" width="1" height="1">
+                            <pattern patternContentUnits="objectBoundingBox" width="1" height="1">
                                 <use xlink:href="#image0_98_8719" transform="translate(0.03) scale(0.00333333)"/>
                             </pattern>
                             <image id="image0_98_8719" width="282" height="300"
@@ -1024,7 +1024,7 @@
                                 <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_98_8719"
                                          result="shape"/>
                             </filter>
-                            <pattern id="pattern0_98_8719" patternContentUnits="objectBoundingBox" width="1" height="1">
+                            <pattern  patternContentUnits="objectBoundingBox" width="1" height="1">
                                 <use xlink:href="#image0_98_8719" transform="translate(0.03) scale(0.00333333)"/>
                             </pattern>
                             <image id="image0_98_8719" width="282" height="300"
