--- a/components/vi/content-1.html
+++ b/components/vi/content-1.html
@@ -1,6 +1,6 @@
 <section class="w-screen content-1 py-10 xl:py-24">
     <div class="container w-full mx-auto pl-4 pr-6 grid lg:grid-cols-12 lg:gap-x-6 xl:px-0">
-        <div class="lg:col-span-5 font-content">
+        <div class="lg:col-span-5">
             <h1 class="page-heading">
                 Phương án tốt nhất <br/>thay thế cho Workplace
             </h1>
