--- a/components/vi/header.html
+++ b/components/vi/header.html
@@ -9,14 +9,12 @@
         <path d="M165.59 6.57255H160.882L152.885 14.3686V0H149.609V25.3939H152.885V18.9494L155.14 16.7444L161.364 25.3939H165.406L157.522 14.4397L165.59 6.57255Z" fill="#28526E"/>
         <path d="M141.47 10.4705V6.57251H138.195V25.4081H141.47V17.3418V16.5451C141.47 12.9743 142.704 10.1433 147.27 10.1433V6.57251C142.931 6.57251 141.47 9.94414 141.47 10.4705Z" fill="#28526E"/>
     </svg>
-
-
     <button type="button"
             data-modal-trigger
             aria-controls="modal-form"
             aria-expanded="false"
             class="button-modal  flex items-center bg-primary rounded-lg md:rounded-xl hover:bg-dark-primary duration-500 ease-in-out ">
-        <span class="sf-pro-font sm:font-heading font-semibold text-white text-sm mx-3 my-1.5 md:text-base md:mx-5 md:my-3"> Liên hệ đăng ký</span>
+        <span class="sm:font-heading font-semibold text-white text-sm mx-3 my-1.5 md:text-base md:mx-5 md:my-3"> Liên hệ đăng ký</span>
         <span class="hidden sm:block sm:p-2.5 sm:bg-white sm:m-1 sm:rounded-lg">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M6.875 3.75L13.125 10L6.875 16.25" stroke="#3AB67B" stroke-width="2.08333" stroke-linecap="round" stroke-linejoin="round"/>
