--- a/components/en/content-4.html
+++ b/components/en/content-4.html
@@ -1,6 +1,6 @@
 <section class="relative bg-dark-blue py-10 lg:rounded-[64px] lg:pt-[72px] lg:pb-[93px]">
     <div class="container w-full mx-auto grid content-center px-4 lg:gap-x-4 lg:grid-cols-12 xl:gap-x-6 xl:px-0">
-        <div class="font-content flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:order-1 lg:col-span-6 ">
+        <div class="flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:order-1 lg:col-span-6 ">
             <h2 class="page-heading text-white">
                 Easily and conveniently switch from Workplace to GapoWork
             </h2>
