--- a/components/en/header.html
+++ b/components/en/header.html
@@ -16,7 +16,7 @@
             aria-controls="modal-form"
             aria-expanded="false"
             class="button-modal  flex items-center bg-primary rounded-lg md:rounded-xl hover:bg-dark-primary duration-500 ease-in-out ">
-        <span class="sf-pro-font sm:font-heading font-semibold text-white text-sm mx-3 my-1.5 md:text-base md:mx-5 md:my-3">Contact to Register</span>
+        <span class="sm:font-heading font-semibold text-white text-sm mx-3 my-1.5 md:text-base md:mx-5 md:my-3">Contact to Register</span>
         <span class="hidden sm:block sm:p-2.5 sm:bg-white sm:m-1 sm:rounded-lg">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M6.875 3.75L13.125 10L6.875 16.25" stroke="#3AB67B" stroke-width="2.08333" stroke-linecap="round" stroke-linejoin="round"/>
