--- a/components/vi/content-5.html
+++ b/components/vi/content-5.html
@@ -4,7 +4,7 @@
             <img src="/images/content-5/image-1.png" alt="Gapo Work"
                  class="md:max-w-[720px] lg:max-w-[450px] xl:max-w-[650px] md:object-contain"/>
         </figure>
-        <div class="font-content flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:col-span-6 xl:translate-x-1/24">
+        <div class="flex flex-col justify-center mt-6 order-2 lg:mt-0 lg:col-span-6 xl:translate-x-1/24">
             <h2 class="font-heading text-black text-2xl font-bold md:text-3xl xl:text-[40px] xl:leading-[64px]">
                 <span class="text-primary">83% khách hàng</span> đồng ý rằng GapoWork thúc đẩy hoạt động truyền thông của lãnh đạo.
             </h2>
