feat: Update Images and Logo

--- a/components/vi/footer.html
+++ b/components/vi/footer.html
@@ -1,6 +1,6 @@
 <section class="relative bg-dark-blue py-10 lg:pt-20 xl:rounded-t-[64px] xl:pt-40 lg:pb-6">
     <div class="mx-auto container px-4 lg:px-8 text-white grid xl:px-0 lg:grid-cols-12 md:gap-[30px]">
-        <h2 class=" font-heading text-2xl md:text-3xl xl:text-[40px] xl:leading-[64px] lg:col-span-6 xl:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
+        <h2 class="font-bold font-heading text-2xl md:text-3xl xl:text-[40px] xl:leading-[64px] lg:col-span-6 xl:col-span-7">Thu hẹp khoảng cách,<br/> mở rộng tầm nhìn
             cùng GapoWork</h2>
         <div class="sm:order-3 lg:order-none lg:col-span-6 xl:col-span-5 md:row-span-2 md:place-self-center">
             <img src="/images/footer-image.png" class="mt-6  w-full h-auto xl:w-[390px] lg:mt-0 xl:h-[234px] " alt="Gapo Work"/>
