feat: Update Images and Logo

--- a/components/vi/modal.html
+++ b/components/vi/modal.html
@@ -58,7 +58,7 @@
                         </label>
                         <label class="flex flex-col gap-1">
                             <span>Chức danh <span class="text-form-red">*</span></span>
-                            <select id="titleInput" name="title" class="input-form">
+                            <select id="titleInput" name="title" class="input-form appearance-none">
                                 <option value=""></option>
                                 <option value="CEO/Founder/Chủ tịch">CEO/Founder/Chủ tịch</option>
                                 <option value="Giám đốc (CTO, CFO,...)">Giám đốc (CTO, CFO,...)</option>
@@ -75,7 +75,7 @@
                         </label>
                         <label class="flex flex-col gap-1">
                             <span>Quy mô </span>
-                            <select id="scaleInput" name="scaleInput" class="input-form">
+                            <select id="scaleInput" name="scaleInput" class="input-form appearance-none">
                                 <option value=""></option>
                                 <option value="Dưới 50">Dưới 50</option>
                                 <option value="100 - 300">100 - 300</option>
