--- a/components/en/modal.html
+++ b/components/en/modal.html
@@ -57,7 +57,7 @@
                         </label>
                         <label class="flex flex-col gap-1">
                             <span>Job Title <span class="text-form-red">*</span></span>
-                            <select id="titleInput" name="title" class="input-form">
+                            <select id="titleInput" name="title" class="input-form appearance-none">
                                 <option value=""></option>
                                 <option value="CEO/Founder/Chủ tịch">CEO/Founder/Chủ tịch</option>
                                 <option value="Giám đốc (CTO, CFO,...)">Giám đốc (CTO, CFO,...)</option>
@@ -74,7 +74,7 @@
                         </label>
                         <label class="flex flex-col gap-1">
                             <span>Scale </span>
-                            <select id="scaleInput" name="scaleInput" class="input-form">
+                            <select id="scaleInput" name="scaleInput" class="input-form appearance-none">
                                 <option value=""></option>
                                 <option value="Dưới 50">Dưới 50</option>
                                 <option value="100 - 300">100 - 300</option>
