feat: Update appearance and heading modal

--- a/components/en/modal.html
+++ b/components/en/modal.html
@@ -31,7 +31,7 @@
                 </button>
                 <div class="hidden lg:flex lg:flex-col lg:gap-6 lg:w-[560px] lg:h-full lg:p-6 text-white">
                     <div>
-                        <h3 class="font-heading text-[32px] leading-10">The Best Alternative to Workplace</h3>
+                        <h3 class="font-bold font-heading text-[32px] leading-10">The Best Alternative to Workplace</h3>
                         <p class="text-content mt-4">Includes data migration and deployment at no extra cost to support customers.</p>
 
                     </div>
