--- a/components/vi/modal.html
+++ b/components/vi/modal.html
@@ -31,7 +31,7 @@
                 </button>
                 <div class="hidden lg:flex lg:flex-col lg:gap-6 lg:w-[560px] lg:h-full lg:p-6 text-white">
                     <div>
-                        <h3 class="font-heading text-[32px] leading-10">Phương án tốt nhất thay thế cho Workplace</h3>
+                        <h3 class="font-bold font-heading text-[32px] leading-10">Phương án tốt nhất thay thế cho Workplace</h3>
                         <p class="text-content mt-4">Kèm chuyển đổi dữ liệu và triển khai, không mất thêm phí để hỗ trợ
                             khách
                             hàng.</p>
