feat: Update icon select

--- a/components/vi/modal.html
+++ b/components/vi/modal.html
@@ -58,7 +58,7 @@
                         </label>
                         <label class="flex flex-col gap-1">
                             <span>Chức danh <span class="text-form-red">*</span></span>
-                            <select id="titleInput" name="title" class="input-form appearance-none">
+                            <select id="titleInput" name="title" class="input-form appearance-none pr-6">
                                 <option value=""></option>
                                 <option value="CEO/Founder/Chủ tịch">CEO/Founder/Chủ tịch</option>
                                 <option value="Giám đốc (CTO, CFO,...)">Giám đốc (CTO, CFO,...)</option>
