feat: change language vi/en

--- a/components/vi/content-3-pc.html
+++ b/components/vi/content-3-pc.html
@@ -21,13 +21,13 @@
                 <path d="M24.3709 15.5577C24.216 15.2554 23.7839 15.2554 23.6291 15.5577L20.909 20.8703L14.862 21.7127C14.5153 21.761 14.3791 22.1892 14.634 22.429L19 26.534L17.9644 32.3448C17.9041 32.6831 18.2562 32.9448 18.5628 32.7896L24 30.037L29.4372 32.7896C29.7438 32.9448 30.0959 32.6831 30.0356 32.3448L29 26.534L33.3657 22.4349C33.6208 22.1954 33.4849 21.7671 33.1384 21.7185L27.091 20.8703L24.3709 15.5577Z"
                       fill="white"/>
             </svg>
-            <img src="/images/content-3/content-3-heading-2.svg" alt="Gapo work" width="160" height="32">
+            <img src="/images/content-3/content-3-heading-2.png" alt="Gapo work"  class="lg:w-40 lg:h-8" width="320" height="64">
         </div>
         <!--end col 2 -->
 
         <!--col 3 -->
         <div class="flex flex-col justify-end items-center gap-[18px] pb-[22px]">
-            <img src="/images/content-3/content-3-heading-3.svg" alt="Work place" width="160" height="32">
+            <img src="/images/content-3/content-3-heading-3.png" alt="Work place" class="lg:w-40 lg:h-8" width="320" height="64">
         </div>
         <!--end col 3 -->
 
