feat: fix size mobile

--- a/components/en/header.html
+++ b/components/en/header.html
@@ -10,7 +10,7 @@
         <path d="M141.47 10.4705V6.57251H138.195V25.4081H141.47V17.3418V16.5451C141.47 12.9743 142.704 10.1433 147.27 10.1433V6.57251C142.931 6.57251 141.47 9.94414 141.47 10.4705Z" fill="#28526E"/>
     </svg>
 
-    <div class="flex items-center gap-6">
+    <div class="flex items-center gap-3 md:gap-6">
         <div class="relative">
             <button type="button"
                     class="btn-language flex items-center text-secondary font-semibold text-base font-heading">
@@ -48,7 +48,7 @@
                     </svg>
                     Vi
                 </a>
-                <a  href="/en.html" onclick=""
+                <a  href="/en.html"
                     class="w-full p-2 flex gap-3 items-center text-primary font-bold text-base font-heading hover:bg-[#091F340A] rounded">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none">
                         <path d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12Z"
