--- a/components/vi/header.html
+++ b/components/vi/header.html
@@ -18,11 +18,11 @@
         <path d="M141.47 10.4705V6.57251H138.195V25.4081H141.47V17.3418V16.5451C141.47 12.9743 142.704 10.1433 147.27 10.1433V6.57251C142.931 6.57251 141.47 9.94414 141.47 10.4705Z"
               fill="#28526E"/>
     </svg>
-    <div class="flex items-center gap-6">
+    <div class="flex items-center gap-3 md:gap-6">
         <div class="relative z-10">
             <button type="button"
                     class="btn-language flex items-center text-secondary font-semibold text-base font-heading">
-                <svg class="mr-2" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="mr-3" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#a)">
                         <path d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12Z"
                               fill="#E73D46"/>
