feat: fix size mobile en

--- a/components/en/header.html
+++ b/components/en/header.html
@@ -10,11 +10,11 @@
         <path d="M141.47 10.4705V6.57251H138.195V25.4081H141.47V17.3418V16.5451C141.47 12.9743 142.704 10.1433 147.27 10.1433V6.57251C142.931 6.57251 141.47 9.94414 141.47 10.4705Z" fill="#28526E"/>
     </svg>
 
-    <div class="flex items-center gap-3 md:gap-6">
+    <div class="flex items-center gap-1 md:gap-6">
         <div class="relative">
             <button type="button"
                     class="btn-language flex items-center text-secondary font-semibold text-base font-heading">
-                <svg class="mr-3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none">
+                <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none">
                     <path d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12Z"
                           fill="#F0F0F0"/>
                     <path d="M2.48 4.696A11.956 11.956 0 0 0 .414 8.87h6.243L2.481 4.696ZM23.587 8.87a11.957 11.957 0 0 0-2.068-4.175L17.344 8.87h6.243ZM.413 15.131a11.957 11.957 0 0 0 2.068 4.176l4.175-4.176H.413ZM19.308 2.481A11.957 11.957 0 0 0 15.132.414v6.243l4.176-4.176ZM4.694 21.52a11.957 11.957 0 0 0 4.176 2.068v-6.243l-4.176 4.176ZM8.87.414a11.957 11.957 0 0 0-4.176 2.067L8.87 6.657V.414ZM15.132 23.588a11.957 11.957 0 0 0 4.176-2.067l-4.176-4.175v6.242ZM17.344 15.131l4.175 4.176a11.957 11.957 0 0 0 2.068-4.176h-6.243Z"
@@ -25,7 +25,7 @@
                           fill="#D80027"/>
                 </svg>
                 En
-                <svg class="ml-1" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="md:ml-1" width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="m16 10-4 4-4-4" stroke="#4D4D4D" stroke-width="2" stroke-miterlimit="10"
                           stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
