feat: Update submenu language

--- a/components/en/header.html
+++ b/components/en/header.html
@@ -14,7 +14,7 @@
         <div class="relative">
             <button type="button"
                     class="btn-language flex items-center text-secondary font-semibold text-base font-heading">
-                <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none">
+                <svg class="md:mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none">
                     <path d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12Z"
                           fill="#F0F0F0"/>
                     <path d="M2.48 4.696A11.956 11.956 0 0 0 .414 8.87h6.243L2.481 4.696ZM23.587 8.87a11.957 11.957 0 0 0-2.068-4.175L17.344 8.87h6.243ZM.413 15.131a11.957 11.957 0 0 0 2.068 4.176l4.175-4.176H.413ZM19.308 2.481A11.957 11.957 0 0 0 15.132.414v6.243l4.176-4.176ZM4.694 21.52a11.957 11.957 0 0 0 4.176 2.068v-6.243l-4.176 4.176ZM8.87.414a11.957 11.957 0 0 0-4.176 2.067L8.87 6.657V.414ZM15.132 23.588a11.957 11.957 0 0 0 4.176-2.067l-4.176-4.175v6.242ZM17.344 15.131l4.175 4.176a11.957 11.957 0 0 0 2.068-4.176h-6.243Z"
@@ -24,14 +24,14 @@
                     <path d="m15.129 15.13 5.355 5.356c.246-.247.48-.504.705-.77l-4.584-4.585h-1.476ZM8.87 15.131l-5.355 5.355c.246.246.503.481.77.706l4.585-4.585V15.13ZM8.87 8.87v-.001L3.515 3.514a12.03 12.03 0 0 0-.706.77L7.394 8.87H8.87ZM15.129 8.87l5.355-5.354a12.02 12.02 0 0 0-.77-.705l-4.585 4.584v1.476Z"
                           fill="#D80027"/>
                 </svg>
-                En
+                <span class="hidden md:block">En</span>
                 <svg class="md:ml-1" width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="m16 10-4 4-4-4" stroke="#4D4D4D" stroke-width="2" stroke-miterlimit="10"
                           stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </button>
-            <div class="content-language hidden absolute w-[122px] p-2 rounded-xl bg-white right-0 top-8 border border-[#DADDE1]">
-                <a href="/vi.html"
+            <div class="content-language hidden absolute w-[186px] p-2 rounded-xl bg-white right-0 top-8 border border-[#DADDE1]">
+                <a href="/"
                    class="hover:bg-[#091F340A] w-full rounded p-2 flex items-center text-secondary text-base font-heading">
                     <svg class="mr-3" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#a)">
