--- a/components/vi/header.html
+++ b/components/vi/header.html
@@ -22,7 +22,7 @@
         <div class="relative z-10">
             <button type="button"
                     class="btn-language flex items-center text-secondary font-semibold text-base font-heading">
-                <svg class="mr-3" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="md:mr-3" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#a)">
                         <path d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12Z"
                               fill="#E73D46"/>
@@ -35,14 +35,14 @@
                         </clipPath>
                     </defs>
                 </svg>
-                Vi
+                <span class="hidden md:block">Vi</span>
                 <svg class="ml-1" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="m16 10-4 4-4-4" stroke="#4D4D4D" stroke-width="2" stroke-miterlimit="10"
                           stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </button>
-            <div class="content-language hidden absolute w-[122px] p-2 rounded-xl bg-white right-0 top-8 border border-[#DADDE1]">
-                <a href="/vi.html"
+            <div class="content-language hidden absolute w-[186px] p-2 rounded-xl bg-white right-0 top-8 border border-[#DADDE1]">
+                <a href="/l"
                         class="w-full p-2 flex gap-3 items-center text-primary font-bold text-base font-heading hover:bg-[#091F340A] rounded">
                     <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#a)">
@@ -57,7 +57,7 @@
                             </clipPath>
                         </defs>
                     </svg>
-                    Vi
+                    Tiếng Việt
                     <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                               d="M19.697 6.283a1 1 0 0 1 .02 1.414l-9.714 10a1 1 0 0 1-1.454-.02L4.263 13.01a1 1 0 1 1 1.474-1.353l3.57 3.887 8.976-9.24a1 1 0 0 1 1.414-.021Z"
@@ -75,7 +75,7 @@
                         <path d="m15.129 15.13 5.355 5.356c.246-.247.48-.504.705-.77l-4.584-4.585h-1.476ZM8.87 15.131l-5.355 5.355c.246.246.503.481.77.706l4.585-4.585V15.13ZM8.87 8.87v-.001L3.515 3.514a12.03 12.03 0 0 0-.706.77L7.394 8.87H8.87ZM15.129 8.87l5.355-5.354a12.02 12.02 0 0 0-.77-.705l-4.585 4.584v1.476Z"
                               fill="#D80027"/>
                     </svg>
-                    En
+                    English
                 </a>
             </div>
         </div>
