feat: Update submenu language

--- a/components/vi/header.html
+++ b/components/vi/header.html
@@ -42,7 +42,7 @@
                 </svg>
             </button>
             <div class="content-language hidden absolute w-[186px] p-2 rounded-xl bg-white right-0 top-8 border border-[#DADDE1]">
-                <a href="/l"
+                <a href="/"
                         class="w-full p-2 flex gap-3 items-center text-primary font-bold text-base font-heading hover:bg-[#091F340A] rounded">
                     <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#a)">
